--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,32 @@
-__pycache__
+# Private
+.env
+
+# Caches
 .mypy_cache
+__pycache__
+.ipynb_checkpoints/
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Local tests
 tests_saves
 my_data
-.env
-*.egg-info/
-.ipynb_checkpoints/
